# hivstats

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml
input/fullgenomes-plasma/: los-alamos-plasma-sequences-one-per-patient.tsv
input/individual-plasma/hxb2/: env.fasta  gag.fasta  nef.fasta  pol.fasta  rev_exon1.fasta  rev_exon2.fasta  tat_exon1.fasta  tat_exon2.fasta  vif.fasta  vpr.fasta  vpu.fasta
input/individual-plasma/seq/: gag.fasta  nef.fasta  pol.fasta  rev_exon1.fasta  rev_exon2.fasta  tat_exon1.fasta  tat_exon2.fasta  vpr.fasta  vpu.fasta
output/: results.txt
output/individual-plasma/: seq.makefile
src/: generate-individual-plasma-makefile  install-dependencies.sh  install-docker.sh  join-csv-files  main.ipynb  make-individual-plasma-csv  mynotebook.py  mynotebook_data.py  print_results.py  remove-alignment-data.py  run-cfeintact  test-docker.sh  test-locally.sh
